Migrate to ‘mock’ version 1.3 with corresponding API changes.

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@ Version NEXT
 
 * Lower dependency for ‘unittest2’, we can work with an earlier version.
 * Specify development status “Production/Stable” in Trove classifiers.
+* Migrate to ‘mock’ version 1.3 with corresponding API changes.
 
 
 Version 2.0.5
